[tool.poetry]
name = "group_messages"
version = "0.1.0"
description = ""
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.1"
pandas = "^0.25.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
